# council

./: .envrc  .envrc.local.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  FLOW_CONFIG.md  OPERATIONS.md  README.md  ROADMAP.md  flow.example.json  flow.json.sig  humble-prancing-thunder.md  pyproject.toml  requirements.txt  serene-jumping-stroustrup.md
council/: __init__.py  audit_log.py  config.py  executor.py  flow_signature.py  flow_tui.py  history_store.py  limits.py  main.py  orchestrator.py  paths.py  prerequisites.py  provider_rate_limits.py  state.py  tui.py  tui_state.py  ui.py
docs/: APPLICATION_FLOW.md  ARCHITECTURE.md  FLOW_CONFIG.md  OPERATIONS.md  SECURITY.md  SETUP.md
tests/: test_audit_log.py  test_config.py  test_executor.py  test_flow_signature.py  test_flow_tui.py  test_history_store.py  test_limits.py  test_main.py  test_orchestrator.py  test_prerequisites.py  test_provider_rate_limits.py  test_state.py  test_tui.py  test_tui_state.py
