[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "council-mas"
version = "0.1.0"
description = "Council - orquestrador multiagente via CLI/TUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "typing_extensions>=4.0.0",
  "textual>=0.58.0",
]

[project.scripts]
council = "council.main:cli"

[tool.setuptools.packages.find]
include = ["council*"]
