[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "council-mas"
version = "0.1.0"
description = "Council - orquestrador multiagente via CLI/TUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "typing_extensions>=4.0.0",
  "textual>=0.58.0",
  "pexpect>=4.9.0",
]

[project.scripts]
council = "council.main:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
security = [
  "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
include = ["council*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
